# verify-lawyer

./: .gitignore  README.md  pyproject.toml  setup.py  verify-lawyer
verify_lawyer/: __init__.py  cli.py  core.py
